# evalbenchs

./: README.md  benchmarks.yaml  pyproject.toml
evalbenchs/: analyze_errors.py  cli.py  config.py  data.py  gigachat.py  inspect.py  openrouter.py  prompting.py  runner.py
